<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trackme"
            android:icon="@drawable/ic_menu_trackme"
            android:title="@string/menu_str_track_me" />
        <item
            android:id="@+id/nav_vehicle_list"
            android:icon="@drawable/ic_menu_directions_bus"
            android:title="@string/menu_str_vehicle_list" />
        <item
            android:id="@+id/nav_history_summary"
            android:icon="@drawable/ic_menu_directions_bus"
            android:title="@string/menu_str_history_summary" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_str_notification" />

        <item
            android:id="@+id/nav_map_view"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_str_map_view" />

    </group>



    <!-- Navigation Bar Settings Options-->
    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_str_settings_config" />
        </menu>
    </item>

    <!-- Navigation Bar Misc Options-->
    <item android:title="Misc">
        <menu>
            <item
                android:id="@+id/nav_customer_support"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_str_customer_support" />

            <item
                android:id="@+id/nav_driver_details"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_str_driver_details" />

            <item
                android:id="@+id/nav_app_ver"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_str_app_ver" />
        </menu>
    </item>




    <!--
        To hide a particula menu section , use android:visible="false"
        <item android:title="Communicate" android:visible="false">
    -->
    <!-- Navigation Bar Sharing Options-->
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
